# GeneticAlgorithm

./: .gitignore  CMakeLists.txt  README.md  main.cpp  parameters.json
Example/SchwefelFunction/: experiment.py  parameters.json  problem.hpp  visualise.py
lib/: core.cpp  core.hpp  solution.cpp  solution.hpp  utils.hpp
